--- a/2025/MediaRepresentationV/mr5_03.md
+++ b/2025/MediaRepresentationV/mr5_03.md
@@ -86,6 +86,18 @@
 
 ### 下準備
 
+2025/4/23追加
+Import images as Planesの代わりに
+- Shift+A
+- Images
+- Mesh Plane
+
+を利用してください。
+- [Import Images as Planesはどこに行ったの？](https://qiita.com/kazuma_f/items/171b0094960261855798)
+
+以下のやり方は4.2以前です。
+
+(古い)
 - Blender を起動して、立方体を削除(X)
 - Edit - preferences - Add ons
 - images を検索
