--- a/2025/MediaRepresentationV/mr5_03.md
+++ b/2025/MediaRepresentationV/mr5_03.md
@@ -162,9 +162,13 @@ Import images as Planesの代わりに
 | Transmission（伝播）         | 1.0              |
 | IOR                          | 1.57             |
 | Alpha（アルファ）            | 0.6              |
-| Blend Mode（ブレンドモード） | アルファハッシュ |
+| Blend Mode（ブレンドモード）...4.2から廃止 | アルファハッシュ |
 
 レンダープロパティの ScreenSpaceReflections にチェックを入れる
+
+2025/4/23追加
+- [i cant find blend mode](https://www.reddit.com/r/blenderhelp/comments/1fo2q2a/i_cant_find_blend_mode/?rdt=54141)
+- [EEVEE migration from older versions to Blender 4.2 LTS¶](https://developer.blender.org/docs/release_notes/4.2/eevee_migration/)
 
 - 台は適当に色をつけてみよう
 
