--- a/2025/AnalogueDesignI/ad1_03.md
+++ b/2025/AnalogueDesignI/ad1_03.md
@@ -1,12 +1,13 @@
 # 造形基礎演習I(小林ターム)
 
-## 2.平坦折り 2 <!-- omit in toc -->
+## 3. トンボ・曲線折り!-- omit in toc -->
 
 [造形基礎演習I TOP に戻る](./index.md)
 
 ---
 ## 目次<!-- omit in toc -->
 - [造形基礎演習I(小林ターム)](#造形基礎演習i小林ターム)
+  - [3. トンボ・曲線折り!-- omit in toc --\>](#3-トンボ曲線折り---omit-in-toc---)
   - [スライド](#スライド)
 
 
