--- a/2025/AnalogueDesignI/ad1_05.md
+++ b/2025/AnalogueDesignI/ad1_05.md
@@ -1,19 +1,10 @@
 # 造形基礎演習I(小林ターム)
 
-## 4. 切り込みを入れた立体制作!-- omit in toc -->
+## 5. エンドレスカード<!-- omit in toc -->
 
 [造形基礎演習I TOP に戻る](./index.md)
 
----
-## 目次<!-- omit in toc -->
-- [造形基礎演習I(小林ターム)](#造形基礎演習i小林ターム)
-  - [4. 切り込みを入れた立体制作!-- omit in toc --\>](#4-切り込みを入れた立体制作---omit-in-toc---)
-  - [スライド](#スライド)
-
-
----
-
 ## スライド
 
-[スライド資料](./ad1_04slide.pdf){:target="_blank"}
+- [スライド資料](./ad1_05slide.pdf){:target="_blank"}
 
