--- a/2025/MediaRepresentationV/mr5_05.md
+++ b/2025/MediaRepresentationV/mr5_05.md
@@ -19,6 +19,7 @@
       - [ガラス](#ガラス)
       - [すりガラス](#すりガラス)
       - [放射](#放射)
+      - [4.2以降の注意点(2025/05/13 update)](#42以降の注意点20250513-update)
       - [参考となるデータベース](#参考となるデータベース)
   - [マテリアルスロット](#マテリアルスロット)
   - [やってみようPart1](#やってみようpart1)
@@ -142,6 +143,10 @@
 | Emission                                   | 放射の色 |
 | Emission Strength                          | 適当に   |
 | ※レンダープロパティのBloomにチェックいれる |
+
+#### 4.2以降の注意点(2025/05/13 update)
+EEVEEに変更が加えられてます。特に放射(Emission)使いたい場合には気をつけてください。
+- [【Blender】v.4.2で無くなったレンダープロパティ項目の代替機能は、何？](https://note.com/info_/n/na01c2e84de2f)
 
 #### 参考となるデータベース
 - [PHYSICALY BASED](https://physicallybased.info/)
