--- a/2025/MediaRepresentationIII/mr3_05.md
+++ b/2025/MediaRepresentationIII/mr3_05.md
@@ -20,6 +20,7 @@
 
 ## データ
 - [Premiere Logo](img/adobe-premiere-logo.png){:target="_blank"}
+- [PremierePro 2024までのサンプル動画でやってみたい人向け](data/A002_C086_09220G_001.mp4){:target="_blank"}
 
 ## 動画
 - [キーフレーム・イージング・プリセット](https://www.youtube.com/watch?v=iiMJ9Eya8O0){:target="_blank"}
