--- a/2025/MediaRepresentationV/mr5_06.md
+++ b/2025/MediaRepresentationV/mr5_06.md
@@ -12,7 +12,7 @@
     - [時間軸を扱うエディター](#時間軸を扱うエディター)
   - [やってみようPart1](#やってみようpart1)
     - [キーフレームの実験](#キーフレームの実験)
-    - [グラフエディタのInterolation Modeの実験](#グラフエディタのinterolation-modeの実験)
+    - [グラフエディタのInterpolation Modeの実験](#グラフエディタのinterpolation-modeの実験)
   - [やってみようPart2](#やってみようpart2)
     - [紙飛行機の作成](#紙飛行機の作成)
     - [適当に建物を作ろう](#適当に建物を作ろう)
@@ -22,6 +22,7 @@
     - [カメラで紙飛行機を追ってみよう](#カメラで紙飛行機を追ってみよう)
     - [カメラを切り替えてみよう](#カメラを切り替えてみよう)
   - [やってみようPart3](#やってみようpart3)
+  - [お疲れ様](#お疲れ様)
 
 ---
 
@@ -67,7 +68,7 @@
 
 ---
 
-### グラフエディタのInterolation Modeの実験
+### グラフエディタのInterpolation Modeの実験
 - Planeを追加して、移動させよう
 - グラフエディタにして、Interolation Modeによってどう変わるか試してみよう
 - グラフエディタではパラメータにモディファイアをつけることができるよ
@@ -145,4 +146,5 @@
 - NLAエディタでアクションに
 - NLAエディタを使って三つのアクションを組み合わせてみよう
 
+## お疲れ様
 
