--- a/2025/MediaRepresentationIII/mr3_06.md
+++ b/2025/MediaRepresentationIII/mr3_06.md
@@ -24,4 +24,4 @@
 
 ## 追記
 無料で評判いいです。
-- [1200種類の無料プリセットが使える無料プラグインMotion Broのインストール方法](https://www.innorise.jp/adobeaftereffects-motionbro/)
+- [Adobe動画編集者におすすめ！Motion broのインストール方法！](https://note.com/amenbopigu/n/nff93a6a9e837)
