--- a/Hardware/Audio/f3.md
+++ b/Hardware/Audio/f3.md
@@ -1,9 +1,13 @@
 # F3 (Zoom)
 F3の利用方法について詳細にまとめます。
 
-
-
 言語設定・日時設定・SDカードのフォーマットは終わっているものとします。
+
+### Macの人、注意！
+- システム環境設定
+- 「プライバシーとセキュリティ」- 「マイク」
+
+にて利用したいアプリケーションがONになっていることを確認してください。
 
 ### 接続
 1. microSDカードがセットされていることを確認
