--- a/2025/MediaRepresentationV/mr5_09.md
+++ b/2025/MediaRepresentationV/mr5_09.md
@@ -15,7 +15,7 @@
       - [Area Light](#area-light)
     - [環境テキスチャ](#環境テキスチャ)
     - [カメラの設定](#カメラの設定)
-    - [カラーマネージメント](#カラーマネージメント)
+    - [カラーマネージメント(2025/6/10修正)](#カラーマネージメント2025610修正)
     - [レンダリング](#レンダリング)
       - [レンダリングエンジンCycles/Eevee違い](#レンダリングエンジンcycleseevee違い)
       - [EEVEE NEXT](#eevee-next)
@@ -99,13 +99,18 @@ AIを利用してHDRIを作成することも可能である。生成系AIの威
 
 ---
 
-### カラーマネージメント
+### カラーマネージメント(2025/6/10修正)
 - Blenderの画面で見える色はカラーマネージメントされている
-- デフォルトでは「Filmic」となっていて、フォトリアルにみえるようにカラーコレクションされている
-- 意図がある場合には、これを「Standard」等他のモードに変えなくてはいけない
+- ~~デフォルトでは「Filmic」となっていて、フォトリアルにみえるようにカラーコレクションされている~~
+- デフォルトではBlender4.0から「AgX」となっています。AgXは、特に明るい部分や露出オーバーの部分の色再現を強化します。
+<!-- - 意図がある場合には、これを「Standard」等他のモードに変えなくてはいけない-->
+
+- [AgX vs Filmic - More Realistic Renders in Blender 4.0 | Bouncing Rays](https://www.youtube.com/watch?v=b83ElHqmFO0)
+
 
 ![セッティング](img/mr5-09-CM-setting.png)
 
+<!--
 - Filmic
 ![Filmic](img/mr5-09-CM-filmic.png)
 
@@ -113,6 +118,10 @@ AIを利用してHDRIを作成することも可能である。生成系AIの威
 ![Standard](img/mr5-09-CM-standard.png)
 
 [参考:Filmicカラーマネージメント/適切なライティングのための第一歩。](http://cgcompo.blog134.fc2.com/blog-entry-76.html){:target="_blank"}
+-->
+
+[参考：AgXでより正確なカラーを実現](https://garagefarm.net/jp-blog/game-changing-features-and-all-new-workflows-whats-new-in-blender-4-0#:~:text=AgX%E3%81%AF%E3%80%81%E6%98%8E%E3%82%8B%E3%81%84%E9%83%A8%E5%88%86%E3%82%84,%E6%96%B0%E3%81%97%E3%81%84%E8%89%B2%E5%BD%A9%E5%8E%9F%E7%90%86%E3%81%A8%E3%81%AA%E3%82%8A%E3%81%BE%E3%81%99%E3%80%82)
+
 
 ---
 
@@ -129,13 +138,15 @@ AIを利用してHDRIを作成することも可能である。生成系AIの威
 - マテリアルもCyclesでないとちゃんと表示できないものもあるので注意
 
 #### EEVEE NEXT
-4.1で実装予定だったEEVEE NEXTが多分4.2で実装される(2024/6/12現在予想)
+4.1で実装予定だったEEVEE NEXTが4.2で実装されました。
 
 - [Eevee Vs Eevee NEXT Vs Cycles: An In-Depth Comparison](https://www.youtube.com/watch?v=Enggo_nqDHs)
 - [EEVEE Nextによる新世代のリアルタイムレンダリング](https://garagefarm.net/jp-blog/a-new-generation-of-real-time-rendering-with-eevee-next)
 
+> EEVEE Nextの最大の特徴は、エンジンでレイトレーシングを可能にしたことです。これにより、ライトとマテリアルがよりリアルに相互作用し、シーンをダイナミックに照らしたり、光源を持つオブジェクトが周囲のオブジェクトを照らしたりできるようになりました。
+<!--
 早く試したい人は[4.2beta](https://builder.blender.org/download/daily/)でためそう。
-
+-->
 
 
 #### レンダープロパティ
@@ -143,10 +154,11 @@ AIを利用してHDRIを作成することも可能である。生成系AIの威
 
 ![Sampling](img/mr5-09-Rendering-Sampling.png)
 
+<!--
 - Ambient Occulusion(環境遮蔽したい時)、Bloom(オブジェクトを光らせる時)、Motion Blur(動画の時)にチェックを入れとこう
   
 ![チェック項目](img/mr5-09-Rendering-ChcekItem.png)
-
+-->
 #### シーンプロパティ(フォーマット・レンジ)
 - 解像度、アスペクト比はデフォルトだと1920x1080,1:1。必要があれば変更
 - フレームレートはデフォルトで24fps(アニメーション向け)なので、29.97を使いたい人は変更
@@ -157,9 +169,9 @@ AIを利用してHDRIを作成することも可能である。生成系AIの威
 #### シーンプロパティ(出力プロパティ)
 - ファイルフォーマットは静止画ならpng, jpeg
 - 動画はFFmpegVideo(Encoding:Mpeg-4)で基本はOK
-- 他のアプリで利用するために圧縮したくない場合は、連番形式、という静止画複数枚に描き差す方法がある。
+- 他のアプリで利用するために圧縮したくない場合は、連番形式、という静止画複数枚に書き出す方法がある。
 - Compressionは画質の圧縮でなく、レンダリングを圧縮するかどうか、という意味らしい
-- Blenderでは色の管理を「Filmic」というモードをデフォルトとしている。もっと明るくパキッとさせたい時は、Standardに変更した方がよいかも
+<!-- - Blenderでは色の管理を「Filmic」というモードをデフォルトとしている。もっと明るくパキッとさせたい時は、Standardに変更した方がよいかも-->
 
 ![静止画](img/mr5-09-Scene-Output-Still.png)
 
@@ -216,7 +228,7 @@ AIを利用してHDRIを作成することも可能である。生成系AIの威
 
 [ダウンロード](data/rp_dennis_posed_004_BLD_Blender30kOnly.zip)
 
-- Blenderフォルダの中にの中に「mr5_08Part1」フォルダを作って、そこに解凍しましょう。
+- Blenderフォルダの中にの中に「mr5_09Part1」フォルダを作って、そこに解凍しましょう。
 
 ### 地面、背景を作成しよう
 - .blendファイルを開く
