--- a/2025/MediaRepresentationV/mr5_09.md
+++ b/2025/MediaRepresentationV/mr5_09.md
@@ -105,11 +105,11 @@ AIを利用してHDRIを作成することも可能である。生成系AIの威
 - デフォルトではBlender4.0から「AgX」となっています。AgXは、特に明るい部分や露出オーバーの部分の色再現を強化します。
 <!-- - 意図がある場合には、これを「Standard」等他のモードに変えなくてはいけない-->
 
-- [AgX vs Filmic - More Realistic Renders in Blender 4.0 | Bouncing Rays](https://www.youtube.com/watch?v=b83ElHqmFO0)
+- [AgX vs Filmic - More Realistic Renders in Blender 4.0  Bouncing Rays](https://www.youtube.com/watch?v=b83ElHqmFO0)
 
-
+<!--
 ![セッティング](img/mr5-09-CM-setting.png)
-
+-->
 <!--
 - Filmic
 ![Filmic](img/mr5-09-CM-filmic.png)
