--- a/2025/MediaCultureTheoryV/mct5_10.md
+++ b/2025/MediaCultureTheoryV/mct5_10.md
@@ -1,5 +1,6 @@
 # メディア文化論V<!-- omit in toc -->
->  9.MIDI
+>  10. 磁気ディスク(HDD)
+
 
 [メディア文化論V TOP に戻る](./index.md)
 
@@ -12,5 +13,5 @@
 
 ## スライド
 
-[スライド資料](./mct5_09slide.pdf){:target="_blank"}
+[スライド資料](./mct5_10slide.pdf){:target="_blank"}
 
