--- a/2025/MediaRepresentationV/mr5_13.md
+++ b/2025/MediaRepresentationV/mr5_13.md
@@ -113,7 +113,7 @@
 [元ネタ：Blender 3.0 Geometry Nodes Lighting a Pavillion](https://www.youtube.com/watch?v=VoxYbGMtXRE){:target="_blank"}
 
 ### 下準備
-- 適当な小屋を作ろう(余裕ない人は[ダウンロード](20220401t_day13_Part2.blend)してね)
+- 適当な小屋を作ろう(余裕ない人は[ダウンロード](data/20220401t_day13_Part2.blend)してね)
 - 電球をつける線をCurveで描こう
 
 ### カーブを電線の様に垂れ下がらせよう
