--- a/2025/MediaRepresentationV/mr5_14.md
+++ b/2025/MediaRepresentationV/mr5_14.md
@@ -8,10 +8,7 @@
 - [メディア表現V 14. コンポジット・動画編集](#メディア表現v-14-コンポジット動画編集)
   - [目次](#目次)
   - [授業評価アンケート](#授業評価アンケート)
-  - [Blender4.2(7/16にでてるはず...)](#blender42716にでてるはず)
-    - [EEVEEがEEVEE NEXTに変更](#eeveeがeevee-nextに変更)
-    - [Blender Addon](#blender-addon)
-    - [...](#)
+  - [Blender4.5(7/15にでてるはず...)](#blender45715にでてるはず)
   - [コンポジット・動画編集](#コンポジット動画編集)
   - [3Dによるレンダリング](#3dによるレンダリング)
   - [リアルさって何？](#リアルさって何)
@@ -39,11 +36,16 @@
 全科目対象です。ご協力お願いいたします。
 
 ---
-## Blender4.2(7/16にでてるはず...)
+## Blender4.5(7/15にでてるはず...)
 わりと大きなアップデートです。
 
+- [New features coming to Blender 4.5!](https://www.youtube.com/watch?v=heB0optyzXE)
+- [Blender 4.5 NEW Update Speeds Up EVERYTHING!](https://www.youtube.com/watch?v=AIoJ1d4NLkY)
+<!--
 - [【Blender】v.4.2で無くなったレンダープロパティ項目の代替機能は、何？](https://note.com/info_/n/na01c2e84de2f)
+- -->
 
+<!--
 ### EEVEEがEEVEE NEXTに変更
 これにともない、より素晴らしい表現ができるようになったのは素晴らしいのですが、
 - ブルーム
@@ -55,7 +57,7 @@
 これまで、ダウンロードしてインストールしていたものが、こちらに登録されることでより便利に使えるようになるかもしれません。
 
 ### ...
-
+-->
 
 ## コンポジット・動画編集
 今日は明示的な課題はありません。
