--- a/2025/MediaRepresentationV/mr5_15.md
+++ b/2025/MediaRepresentationV/mr5_15.md
@@ -16,14 +16,14 @@
   - [動画](#動画)
   - [参考動画](#参考動画)
   - [まとめ](#まとめ)
-  - [すでに提出された作品があれば...](#すでに提出された作品があれば)
+  - [最終課題：すでに提出された作品があれば...](#最終課題すでに提出された作品があれば)
 
 ---
 
 ---
 ## 授業評価アンケート
 - **回答方法：** UNIPA - アンケート/掲示 - 授業評価- 授業評価回答
-- **期日：** 7/3-7/28
+- **期日：** 2025 年 6 月 30 日（月）～7 月 27 日（日）
 
 全科目対象です。ご協力お願いいたします。
 
@@ -43,17 +43,17 @@
 実際には、レンズの歪みなどもあるため、特徴点は最低8個ないといけません。
 
 ## 説明動画
-https://www.youtube.com/watch?v=V62Ow3SXE6c
+- [モーショントラッキングやろうぜ！！ Blender2.82a](https://www.youtube.com/watch?v=V62Ow3SXE6c)
 
 ## トラッキング失敗...
 完全にいつでもうまくいくかというと、トラッキング失敗でうまくいかないこともあります。
 
 - 特徴点がわかりやすい映像か？
 
-
+に注意しましょう。場合によっては、自分でマーカーを置く必要もあります。
 
 ## やってみよう
-下にあるテンキーバージョンでも構いません。
+下にある参考動画のテンキーバージョンでも構いません。
 
 - VFXで新規書類
 - OPENで映像を開く(とってきても、下からデータを拾っても)
@@ -63,7 +63,6 @@ https://www.youtube.com/watch?v=V62Ow3SXE6c
 - (Cameraのプリセット合わせた方がいいけど)
 - 1フレーム目へ
 - Ctrl+クリックで、マーカーを置いていく(8個以上ないといけない) or 「Detect Features」
-- 
 - 上右矢印をクリックして、マーカーをトラックしていく
 - Solveパネルにして、SetAsBackgroudで背景に動画を設定
 - SolveCameraMotion
@@ -84,7 +83,7 @@ https://www.youtube.com/watch?v=V62Ow3SXE6c
 
 
 ## 動画
-自分でとってきてもいいけど
+自分でとってきてもいいけど、一応置いておきます。
 - [IMG_5011.MOV](./data/IMG_5011.MOV)
 - [IMG_5012.MOV](./data/IMG_5012.MOV)
 - [IMG_5013.MOV](./data/IMG_5013.MOV)
@@ -110,7 +109,8 @@ https://www.youtube.com/watch?v=V62Ow3SXE6c
 
 表現の幅を広げていきましょう。
 
-## すでに提出された作品があれば...
+## 最終課題：すでに提出された作品があれば...
+- [最終課題](./mr5_kadai.md)
 締め切りは7月末ですので、後で他の人がどんなのを作成したか見てみましょう。
 
 
