--- a/2025/MediaRepresentationVI/mr6_01.md
+++ b/2025/MediaRepresentationVI/mr6_01.md
@@ -13,6 +13,7 @@
     - [授業の形式・計画](#授業の形式計画)
   - [本演習について](#本演習について)
   - [履修人数について](#履修人数について)
+  - [教室について](#教室について)
   - [授業の形式・計画の意図](#授業の形式計画の意図)
     - [テキストエディタ・マークダウン](#テキストエディタマークダウン)
     - [データベース](#データベース)
@@ -137,6 +138,12 @@ Googleが提供する様々な管理ツールについて学修する。
 HTML,CSS,JavaScript,CMSを触っていなくても一応成立するとは思いますが、
 知っておいた方がより役には立つと思います。
 
+## 教室について
+506は映像デザイン演習が入っているので、コンピュータ演習室の空きを探したら323が空いてました。
+コンピュータ演習室だと電源が各机にあります。
+というわけで、申請通れば323にしようと思います。
+
+manabaで案内します。(通ればUNIPAの部屋情報もアップデートされるはず)
 
 ---
 ---
