--- a/2025/MediaRepresentationVI/mr6_01.md
+++ b/2025/MediaRepresentationVI/mr6_01.md
@@ -130,7 +130,7 @@ Googleが提供する様々な管理ツールについて学修する。
 ---
 ## 履修人数について
 情報デザイン演習こんなに履修していないのに、
-- 30名
+- 33名
 
 の人に履修していただいています。
 科目名だけで履修してしまった人も多いような気がします。
@@ -269,7 +269,8 @@ AI進化が早すぎてよくわかりませんね。
 - ソフトウェア開発
 
 などなどとなっています。
-[【AI学習Vol.2】生成AI(ジェネレーティブAI)とは？使い方・種類・仕組み・活用事例を解説](https://www.youtube.com/watch?v=KUNBWh9rprI)
+
+[【AI学習Vol.2】生成AI(ジェネレーティブAI)とは？使い方・種類・仕組み・活用事例を解説(2:10)](https://www.youtube.com/watch?v=KUNBWh9rprI)
 
 ---
 ## 情報収集方法
