--- a/2025/MediaRepresentationVI/mr6_02.md
+++ b/2025/MediaRepresentationVI/mr6_02.md
@@ -23,7 +23,6 @@
   - [多種多様なテキストエディタ](#多種多様なテキストエディタ)
   - [VSCode特徴](#vscode特徴)
     - [VSCショートカットチートシート](#vscショートカットチートシート)
-    - [マルチカーソル](#マルチカーソル)
     - [検索と置換](#検索と置換)
       - [検索](#検索)
       - [置換](#置換)
@@ -175,7 +174,7 @@ Command+スペースでSpotlightが立ち上がるのもいいですかね。
 
 ですが、使い勝手を良くするために様々なものが開発されてきました。
 
-ですが、2022現在では、ほぼ**Visual Studio Code**が制覇したと言って良いでしょう。
+ですが、2022辺りから、ほぼ**Visual Studio Code**が制覇したと言って良いでしょう。
 
 - [戦国時代だったテキストエディタ界をVisual Studio Codeが天下統一しつつある](https://gigazine.net/news/20210723-the-era-of-visual-studio-code/){:target="_blank"} 
 
@@ -188,8 +187,8 @@ Command+スペースでSpotlightが立ち上がるのもいいですかね。
 
 また、Rustと呼ばれる実行速度の速い言語で開発された[Zed](https://github.com/zed-industries/zed),[**Lapce**](https://lapce.dev/){:target="_blank"}, がVSC一強の中で注目されています。
 
-AIの機能をエディタに取り入れた[Cursor(有料？)](https://www.cursor.com/)だったり、VSCに[Aider](https://marketplace.visualstudio.com/items?itemName=MattFlower.aider)などを追加しての利用も一部注目されていますが、まだ流動的かな、と思っています。
-
+AIの機能をエディタに取り入れた[Cursor(有料？)](https://www.cursor.com/)だったり、VSCに[Github Copilot](https://code.visualstudio.com/docs/copilot/overview),[Aider](https://marketplace.visualstudio.com/items?itemName=MattFlower.aider)などを追加しての利用も注目されていますが、まだこれが確定、みたいにはなっていないと思っています。
+- [VSCodeのGitHub Copilotをしっかり使いこなそう！](https://www.youtube.com/watch?v=ASQt2cb-6Oc)
 - [参考：VSCode + Aider + Supermaven : STOP PAYING for CURSOR with this 100% FREE & Opensource Alternative](https://www.youtube.com/watch?v=XkDSQq0fwfU)
 
 ---
@@ -215,7 +214,9 @@ AIの機能をエディタに取り入れた[Cursor(有料？)](https://www.curs
 
 - [参考：【初心者向け】Visual Studio Codeの使い方・便利機能解説！ショートカット/日本語化/Emmet【作業効率化】](https://www.youtube.com/watch?v=pQ7tmTx5Zbk)
 
+<!--
 ---
+
 ### マルチカーソル
 文字入力はカーソルの位置に行なわれますが、VSCにはマルチカーソル、という機能があります。
 
@@ -225,7 +226,7 @@ AIの機能をエディタに取り入れた[Cursor(有料？)](https://www.curs
 2. Option+Shift(win: Alt+Shift)で、行頭をドラッグして複数行を選択してみましょう。
 3. カーソルの数が増えましたね。
 4. 文字を入力すると、カーソルの位置全部に入力ができますね。
-
+-->
 ---
 ### 検索と置換
 全てのテキストエディタに搭載されています。意外と知らない人が多いので、触れておきます。
