--- a/2025/MediaRepresentationIII/mr3_05.md
+++ b/2025/MediaRepresentationIII/mr3_05.md
@@ -18,6 +18,11 @@
 
 [スライド資料](./mr3_05slide.pdf){:target="_blank"}
 
+<!--
+TODO:
+- [【神アプデ】PremiereProに90種以上のエフェクトが大量追加！注意点も含めてFilmImpact徹底解説！](https://www.youtube.com/watch?v=5lPka2L9VBo)
+-->
+
 ## データ
 - [Premiere Logo](img/adobe-premiere-logo.png){:target="_blank"}
 - [PremierePro 2024までのサンプル動画でやってみたい人向け](data/A002_C086_09220G_001.mp4){:target="_blank"}
