--- a/2025/MediaRepresentationVI/mr6_03.md
+++ b/2025/MediaRepresentationVI/mr6_03.md
@@ -4,6 +4,15 @@
 
 ---
 
+<!--
+TODO:
+# Obsidian追加する？
+- [ObsidianをGitHubで同期する方法](https://note.com/kamechan_usagi/n/nf1813f7e7835)
+- [【2025年最新】Obsidian × AIでメモが変わる！無料プラグイン「Smart Composer」を徹底解説します！](https://www.youtube.com/watch?v=VspOkpPgE6c)
+- [【超便利】Obsidianを愛用する「たった1つの理由」](https://www.youtube.com/watch?v=usNSlfWoG24)
+- [【Obsidian】第二の脳を創る 究極のノート術【テンプレート配布｜GitHub】](https://www.youtube.com/watch?v=fuyia-TUpeY)
+
+-->
 ## 目次
 
 - [メディア表現 VI 3. Markdown記法](#メディア表現-vi-3-markdown記法)
