--- a/2025/InformationDesignII/id_03.md
+++ b/2025/InformationDesignII/id_03.md
@@ -1,12 +1,12 @@
-# 情報デザイン演習I 3.HTML実践
+# 情報デザイン演習II 3.HTML実践
 
-[情報デザイン演習I TOP に戻る](./index.md)
+[情報デザイン演習II TOP に戻る](./index.md)
 
 ---
 
 ## 目次
 
-- [情報デザイン演習I 3.HTML実践](#情報デザイン演習i-3html実践)
+- [情報デザイン演習II 3.HTML実践](#情報デザイン演習ii-3html実践)
   - [目次](#目次)
   - [スライド](#スライド)
 
