--- a/2025/MediaRepresentationVI/mr6_04.md
+++ b/2025/MediaRepresentationVI/mr6_04.md
@@ -331,7 +331,7 @@ AIはマークダウンと相性がいいので、前回紹介した
 
 > **Airtable**は、2012年にリリースされたクラウド型のデータベース管理に特化したノーコードツールです。
 
-https://www.airtable.com/home/built-for-you
+- [AirTable](https://www.airtable.com/home/)
 
 ### 2024 注意
 - アップデートが激しく、多少文字表記が異なります。
@@ -363,8 +363,8 @@ DBの設計・実装を簡単に理解して欲しいのが、今回の目的で
 日本語がチャットで通るようですが、変換時に勝手に送信されるバグがあります。
 そのため、プロンプトは別アプリで入力し、それをコピペして利用しましょう。
 
-できる人は、これより後を実装後、Ominiを使ってみましょう。
-無理ーという人は、大学で利用できる映像機材DBを作ってみてください。
+できる人は、これより後を実装後、Omniを使ってみましょう。
+無理ーという人は、Omniを使って大学で利用できる映像機材DBを作ってみてください。
 
 
 ### PrimaryField
