--- a/2025/InformationDesignII/id_09.md
+++ b/2025/InformationDesignII/id_09.md
@@ -21,7 +21,10 @@
 [スライド資料](./id_09slide.pdf){:target="_blank"}
 
 - [Facebook ページプラグイン](https://developers.facebook.com/docs/plugins/page-plugin?locale=ja_JP){:target="_blank"}
-- [Twitter プラグイン](https://publish.twitter.com/){:target="_blank"}
+- [Xのタイムラインを埋め込む方法](https://help.x.com/ja/using-x/embed-x-feed)
+
+
+<!-- - [Twitter プラグイン](https://publish.twitter.com/){:target="_blank"}-->
 
 <!--
 ## 動画
