--- a/2025/MediaRepresentationVI/mr6_09.md
+++ b/2025/MediaRepresentationVI/mr6_09.md
@@ -56,7 +56,7 @@ Googleの様々なツールを試してみました。
 デスクトップアプリも、スマホ用のアプリもあるので便利です。
 なお、このサービスも日々アップデートされています。
 
-[NotionAI](https://www.notion.com/ja/product/ai){:target="_blank"}もサービスが始まっています。無料トライアルがあるのですが、基本有料サービスのため今回は割愛します。
+[NotionAI](https://www.notion.com/ja/product/ai){:target="_blank"}もサービスが始まっています。無料だと、できることは限られています。
 
 ### ログイン
 [https://www.notion.so/ja-jp/product](https://www.notion.so/ja-jp/product)
@@ -70,10 +70,15 @@ Googleの様々なツールを試してみました。
 
 ### 日本語化
 日本語インターフェイスになっていない人は、次のようにしましょう。
+<!--
 - サイドバーのSetting & Membersをクリック
 - Language & RegionのLanguageを日本語に
 
 まだ環境によってはバグが残っているような気がします。
+-->
+- 左の下の方の歯車アイコンを押す
+- 上から2番目の設定
+- 言語から日本語を選択
 
 ---
 ### Notionの基本
@@ -125,14 +130,14 @@ Googleの様々なツールを試してみました。
 
 
 #### ページとサブページ
-左下の**新規ページ**から作成することができます。
+左上の**新規ページ**から作成することができます。
 
-- 新規ページ - 空のページを作ってみましょう。
-- タイトルを「無題」の中に「テスト」と入力しましょう。
+- 新規ページ を作ってみましょう。
+- タイトル「新規ページ」の中に「テスト」と入力しましょう。
 - タイトルの上の「アイコンを追加」でページのアイコンをつけてみましょう。
 - タイトルの上の「カバー画像を追加」でページのカバー画像をつけてみましょう。Unsplashタブにすると、検索することもできます。
 - 左のページの「+」ボタンを押してサブページを作ってみましょう。
-- 適当にブロックを追加してみましょう。
+- 適当にブロックを追加してみましょう。(AI文章書いてくれますね...)
 
 Notionではフォルダの代わりにこのサブページを利用します。
 並べ替えなどはドラッグ&ドロップで可能です。
@@ -161,15 +166,16 @@ Notionのデータベースはページの一覧のようなものです。
 #### テンプレート
 Notionでは複製やカスタマイズ用に50以上のテンプレートを用意しています。
 
-左下の**テンプレート**をクリックして、適当に一つ選んでみましょう。
+左下の**マーケットプレイス**をクリックして、適当に一つ選んでみましょう。
 
 [テンプレートギャラリー](https://www.notion.so/ja-jp/templates){:target="_blank"}にもあります。
 
 <!--
 **学生・教育者関係**の**大学**を複製して、少し触ってみましょう。
 -->
+**検索** で「大学」を入力して、「大学」を選択してからテンプレートを自分のところに追加しましょう。
 
-**見つける**の右の**学校**をクリックして、少しスクロールして**大学**を選んで、**追加**にて大学をプライベートに複製しましょう。少し触って便利さをわかってくれればと思います。
+少し触って便利さをわかってくれればと思います。
 
 #### ワークスペース
 ページを複数保持できるのがワークスペースという考え方です。
@@ -177,7 +183,7 @@ Notionでは複製やカスタマイズ用に50以上のテンプレートを用
 個人として一人で利用してもいいですし、共同作業者を指定してチームで共有することもできます。
 
 #### コンテンツの共有
-Shareから
+ページ右上の「共有」から
 - 他の人と共有(メールアドレス)
 - チームと共有(有料)
 - Webで共有
@@ -203,10 +209,6 @@ Shareから
 リレーションも可能です。
 
 #### インターフェイスについて
-安定しないので、とりあえず英語版で書いていきます。
-- Add Icon:  アイコンを追加
-- Add Cover: カバー画像を追加
-- Add Description: 説明を追加
 
 ---
 [![](https://img.youtube.com/vi/kNqPnOIAgbQ/0.jpg)](https://www.youtube.com/watch?v=kNqPnOIAgbQ)
@@ -223,7 +225,7 @@ Shareから
 - Tableをリンク集
 としましょう。
 
-データとして,「マイナビ2026」https://job.mynavi.jp/2026/
+データとして,「マイナビ2027」https://job.mynavi.jp/2027/
 を入力しておきましょう。
 
 左上のTableを右クリックでRename,リンク集としておきましょう。
