--- a/2025/InformationDesignII/id_10.md
+++ b/2025/InformationDesignII/id_10.md
@@ -15,6 +15,9 @@
   - [Sammyゼミ履修希望の人へ](#sammyゼミ履修希望の人へ)
 
 ---
+今日でテキストの4-7章をやってみよう、の回は終わりです。
+一つのサイトをHTML,CSSで作成する方法についてしっかり理解しましょう。
+
 
 ## スライド
 
@@ -33,4 +36,4 @@
 - [Large Desktop](./id_10_root/large-desktop.html)
 
 ## Sammyゼミ履修希望の人へ
-- [Sammyゼミ履修希望の2年生へ](https://sammyppr.github.io/Seminar_Sammy/ForSophomore/2025ForSophomore.html)
+- [Sammyゼミ履修希望の2年生へ](https://sammyppr.github.io/Seminar_Sammy/ForSophomore/2026ForSophomore.html)
