--- a/2025/InformationDesignII/id_10.md
+++ b/2025/InformationDesignII/id_10.md
@@ -28,6 +28,15 @@
 
 - [XDデータ](asset/xd-resources-responsive-design-ui.xd)
 
+Figmaでインポートできるように.figデータに変換したのでこちらがいいですね。
+
+- [figデータ](asset/Convertify_xd-resources-responsive-design-ui.fig)
+
+[Convertify](https://www.figma.com/community/plugin/849159306117999028/convertify-sketch-adobe-google)を利用してXDからコンバートしました。
+
+Figmaから写真をエクスポートするときには[Figmaからのエクスポート](https://help.figma.com/hc/ja/articles/360040028114-Figma%E3%81%8B%E3%82%89%E3%81%AE%E3%82%A8%E3%82%AF%E3%82%B9%E3%83%9D%E3%83%BC%E3%83%88)を参考にしましょう。
+
+
 ## 資料
 - [Lets Coding](tex/Lets-Coding.pdf)
 - [Lets Coding Part2](tex/Lets-CodingPart2.pdf)
