--- a/2025/MediaRepresentationVI/mr6_11.md
+++ b/2025/MediaRepresentationVI/mr6_11.md
@@ -1,247 +1,180 @@
-# メディア表現 VI 11.ノーコード開発I
+# メディア表現 VI 11.~~ノーコードツールI~~ AI 1
 
 [メディア表現 VI TOP に戻る](./index.md)
 
 ---
 
+<!--
+内容変更
+
+AIをベースに4回頑張る。
+トピックとしては、
+- NotebookLM
+- Antigravity
+- 
+
+-->
+
 ## 目次<!-- omit in toc -->
 
-- [メディア表現 VI 11.ノーコード開発I](#メディア表現-vi-11ノーコード開発i)
-  - [ノーコード開発](#ノーコード開発)
-    - [ノーコード・ローコードとは？](#ノーコードローコードとは)
-    - [ノーコードのデメリット](#ノーコードのデメリット)
-    - [ノーコードでも設計は必要](#ノーコードでも設計は必要)
-    - [日本語対応のノーコードツール](#日本語対応のノーコードツール)
-  - [Bubbleで作ろう！SNSアプリ](#bubbleで作ろうsnsアプリ)
-    - [今回利用するノーコードツール Bubble](#今回利用するノーコードツール-bubble)
-    - [作るアプリ](#作るアプリ)
-    - [必要な機能](#必要な機能)
-    - [ウォーターフォール開発とアジャイル開発](#ウォーターフォール開発とアジャイル開発)
-    - [セキュリティについて](#セキュリティについて)
-    - [プランについて](#プランについて)
-  - [Bubbleへの登録・ログイン](#bubbleへの登録ログイン)
-  - [新規アプリを作る](#新規アプリを作る)
-    - [初期設定](#初期設定)
-    - [デザイン ヘッダーとTweet部分](#デザイン-ヘッダーとtweet部分)
-    - [データベースの作成](#データベースの作成)
-    - [データベースの反映](#データベースの反映)
-    - [Tweetする画面を作ろう](#tweetする画面を作ろう)
-  - [今日のまとめ](#今日のまとめ)
+- [メディア表現 VI 11.~~ノーコードツールI~~ AI 1](#メディア表現-vi-11ノーコードツールi-ai-1)
+  - [Gemini3.0](#gemini30)
+  - [Geminiの進化](#geminiの進化)
+    - [Gemini 1](#gemini-1)
+    - [Gemini 2](#gemini-2)
+    - [Gemini 3](#gemini-3)
+  - [Gemini 3.0の特徴](#gemini-30の特徴)
+  - [基本を抑えよう：モード](#基本を抑えようモード)
+  - [基本を抑えよう：+(ファイルを追加), マイクアイコン](#基本を抑えようファイルを追加-マイクアイコン)
+    - [ファイルを追加](#ファイルを追加)
+    - [マイクアイコン](#マイクアイコン)
+  - [基本を抑えよう：ツール](#基本を抑えようツール)
+    - [Deep Research](#deep-research)
+    - [画像を生成](#画像を生成)
+    - [Canvas](#canvas)
+    - [ガイド付き学習](#ガイド付き学習)
+  - [やってみよう1](#やってみよう1)
+  - [やってみよう2](#やってみよう2)
+  - [提出](#提出)
 
 ---
-
-
-## 本日の内容<!-- omit in toc -->
-python人気ないので、
-
-- 【第11回】ノーコード開発I
-
-をやっていきましょう。
-
 ---
 ## 前回のおさらい<!-- omit in toc -->
 Git, GitHubについてやってみました。
 初期設定が多少めんどくさかったですが、一度設定すれば便利に使えます。
 
-ノーコード開発が早く終わるようであれば、14回目に追加でやってみようと思います。
+バックアップ・資料の共有等に使ってみてください。
 
-ターミナルの操作の表記がわかりづらかったので、資料修正してあります。
+## 2024にやったこと。<!-- omit in toc -->
+ここから3回かけてノーコードツール「[Bubble](https://bubble.io/)」にてxのようなアプリを作ってみよう、をやっていました。興味ある人は、トップページから下のarchicve2024から見てみましょう。
 
----
-## ノーコード開発
-***ノーコード***という言葉も何回か使ってきました。
-5回目にAirTableを使ってみました。
-
-### ノーコード・ローコードとは？
+## ノーコード・ローコードとは？<!-- omit in toc -->
 コーディングによるプログラミング開発を行わないで、ホームページを作成したり、Webアプリケーションを開発したりと、従来ではエンジニアが担当していた部分を、非エンジニアでも開発できるよう作られた開発プラットフォームです。
 
 コードを書かずなくて良いため、皆さんのようにコーディングが得意でない人にはうってつけです。
 
-ノーコードで開発ができれば、社会人になった時にひょっとしたら非常に便利になるかもしれません。
-
-### ノーコードのデメリット
-コーディングによるプログラミングに対して、できることが開発プラットフォームによって限定される、という点が挙げられます。
-プラットフォームを選ぶときには、何ができて何ができないかを調査する必要があります。
-
-### ノーコードでも設計は必要
-***コーディングしないから簡単***と謳われるノーコードツールですが、
-> やりたいことを形にする(設計)
-
-はどうしても必要です。
-- やりたいことを書き出す
-- どういうインターフェイスにするか考える
-- どういうデータベースを作成するか考える
-- 実装する
-
-これらをできる思考力を高めましょう。
-
-### 日本語対応のノーコードツール
-日本語対応のノーコードツールも多数リリースされています。
-[日本語対応のノーコードツール5選！！プロダクト開発から業務改善まで対応！！](https://nocodo.net/media/media-5670/)
-- [Click](https://click.dev/)
-- [MagicInstructions](https://magicinstructions.app/)
-- [サスケWorks](https://works.saaske.com/)
-- [Kintone](https://kintone.cybozu.co.jp/)
-- [Platio](https://plat.io/ja/)
-
-ちょっと覗いてみましょう。
-
----
-## Bubbleで作ろう！SNSアプリ
-### 今回利用するノーコードツール Bubble
-今回は、現在最強、一番汎用性が高いと言われているノーコードツールです。
-英語ベースですが、こちらを採用したいと思います。
-
-- [Bubble](https://bubble.io/)
-
-### 作るアプリ
-twitterのようなアプリを開発してみようと思います。
-
-ここを参考にしています。
--[ノーコード ラボ twitter clone](https://blog.nocodelab.jp/archive/category/twitter%20clone)
-
-### 必要な機能
-twitterのようなアプリを作るのにどんな機能が必要でしょうか？
-
-- UIデザイン
-- ログイン機能
-- Tweet表示
-- 投稿処理
-- ユーザプロフィール画面
-
-とりあえずこの辺が必要ですね
-
-### ウォーターフォール開発とアジャイル開発
-従来、しっかりとした設計をして、仕様書を策定し、それから実際にコードに落とし込むとう開発方法をとっていました。これは**ウォーターフォール開発**と呼ばれ、変更が起きづらいシステムの開発に適していますが、変更が起こるたびに作り直しとなり、時間がかかることが問題でした。工程としては以下のようになります。
-
-> 要件定義 > 設計 > 製造 > テスト > リリース
-
-最近では素早い仕様変更が求められるようになり、アジャイル開発、**とりあえず作ってみて、おかしなところがあればどんどん変更しよう**が普及しています。
-
-皆さんがXD,Figmaで作業してきたのは**プロトタイピング**で、実際に画面遷移などを確認しながら仕様を決めよう、というものでしたが、アジャイルでは実際に動くものを作っちゃえ、という発想になります。
-
-プロトタイピングを一歩進めたのがアジャイル開発とも言えます。
-
-大規模な開発にはウォーターフォールが必須ですが、比較的小規模な場合にはアジャイルが向いています。
-
-綿密な仕様を決めずに開発し、ユーザのフィードバックを得ながらさらに開発を進めていきます。
-
-今回はアジャイル開発手法をとっていきましょう。
-
-ノーコードはアジャイルに向いています。
-
-### セキュリティについて
-実際にリリースするアプリではセキュリティ対策は必須となりますが、今回はそんなに気にしません。
-
-### プランについて
-bubbleの無料プラン(Free)でできるのはテスト開発までですが、今回はこれを利用していきましょう。
-
----
-## Bubbleへの登録・ログイン
-1. [.bubble](https://bubble.io/)にアクセス
-2. 右上の**Get started**をクリック
-3. Googleアカウントか、メールアドレスにて登録します。自分はGoogleアカウントにしました。
-4. Sign Inします
-5. アンケートがいくつかあります
-6. 「Hi there, what's your goal today?」Build
-7. 「Which of the following describes your experience? Select all that apply.」1番下にチェック
-8. 「Which of the following describes your background? Select all that apply.」1番下にチェック
-9. 「Where did you hear about Bubble?」Friends or colleagues
-
-## 新規アプリを作る
-### 初期設定
-[![](https://img.youtube.com/vi/AAIk4qa4Wsk/0.jpg)](https://www.youtube.com/watch?v=AAIk4qa4Wsk)
-
-2024/11/20追記
-- 12はスキップ
-- 13はindexを選んで、layoutタブのContainer Layoutを「column」に
-- ComponentLibraryは上のバーの「Components」から表示させよう
+ポチポチクリックすることで、開発が済んでしまいますが、最近ではこの分野にもAIがどんどん採用されていて、もはや「ポチポチ」もいらなくなってきたりしています。
 
 
-1. 「Create a new app」で、TwitterTestとでもしておきましょう。
-2. 他の人と異なる名前でないと登録できないため、数字や記号を後ろにつけましょう。
-3. 「Create app」をクリック
-4. 有料の案内が出るので左下の「Start with basic features」
-5. 少し時間かかります
-6. Stepが5つありますね。
-7. Step1 そのまま
-8. Step2 Japanese(ja_jp)
-9. Step3 そのまま
-10. Step4 そのまま
-11. Step5 そのまま、Get started building
-12. ComponentLibraryにバルーンがついてるので、Get Started
-13. 「Step1:Set your page to column layout」 Set to column
-14. 「Nice! Page layout has been updated」Next
-15. 「Step 2: Drag and drop components」Got it
+## ということで...<!-- omit in toc -->
+AIをベースとした内容に11-14回目を変更しようと思っています。
 
-### デザイン ヘッダーとTweet部分
-[![](https://img.youtube.com/vi/QUAWKYcttx4/0.jpg)](https://www.youtube.com/watch?v=QUAWKYcttx4)
+授業作りながらなので、まだ全貌が見えていませんが、個人的にはGemini3.0の登場により、現時点ではその周りのことを押さえておけば良いような気がしています。
 
-2024/11/20追記
-- 上のバーから「Components」からComponentsLibraryを表示
-- installしないとHeaderがドラッグできないので、install
+大手AI会社には
+- OpenAI
+- Anthropic
+- Perplexity
+- Google DeepMind
 
-1. Headerの一番上をドラッグアンドドロップ
-2.  Headerをダブルクリックして、AppearanceタブのBackgroundをDDDDDDに
-3.  右上のPreviewを押すと、現在の状況が見えます
-4.  左のGroupをHeaderの下にドラッグ&ドロップします。
-5.  GroupBをダブルクリックでContents Groupに。LayoutタブのContainer LayoutをColumn, Make this element fixed-width のチェックを外す。StyleをRemoveStyleしてからBackgroundをFlatColor,BBBBBBに。中に要素を入れづらいので、Min.Hiehgtを1000pxに。
+等いろいろありますが、Googleが気になるので、 Googleメインで扱おうと思います。
 
-### データベースの作成
-[![](https://img.youtube.com/vi/cOGJoYfCMG0/0.jpg)](https://www.youtube.com/watch?v=cOGJoYfCMG0)
+## Gemini3.0
+<!-- 
+https://www.youtube.com/watch?v=TnU88XdlY-w
+-->
+Googleが2025年11月19日に発表した、最新かつ最も高性能なAIモデルです。
+一般ユーザー向けの無料版では、1日に5回まで思考(Thinking)モードを利用できます。 さらに、開発者にとっても嬉しい無料枠が用意されています。
 
-1. Tweetのデータベースを作成しましょう。
-2.  左のDataタブをクリック
-3.  NewTypeのところに「Tweet」でCreate
-4.  Create a new fieldを押してFieldName：Message, FieldType:textでCreate
-5.  デザインしやすいようにデータを挿入しておきましょう。
-6.  上のAppDatamをクリック。All Tweetsが青くなっているのを確認して、NewEntry
-7.  Messageに「初めてのBubbleデータベース」、Slugは空欄で、Create
-8.  All Tweetsにデータが入ってるのを確認しましょう。
-9.  もう一つ「2回目のメッセージ」を入力しておきましょう。
-10. もう一つ、4,50文字のメッセージを入力しておきましょう。
+## Geminiの進化
+### Gemini 1
+当初からマルチモーダル(テキスト、画像、音声、動画など、複数の異なる形式（モダリティ）のデータを同時に処理・統合する技術や考え方)対応
+視覚・聴覚・情報の理解と生成が可能
 
-### データベースの反映
-[![](https://img.youtube.com/vi/HiV4grfZ1yg/0.jpg)](https://www.youtube.com/watch?v=HiV4grfZ1yg)
+### Gemini 2
+推論能力が向上。思考・コーディング・行動するAIエージェントへ進化
 
-1. データベースの中身をデザインに反映させましょう。
-2.  Designタブをクリック
-3.  Contents Groupの中にRepeating Groupをドラッグ&ドロップ
-4.  AppearanceタブでType of ContentsでTweet。Data sourceでDo a search forにしてtypeをTweet。Close
-5.  LayoutタブでCell's Container layoutをColumn, Make this element fixed-width のチェックを外す。Sort byをcreated Date, DescendingをYes
-6.  これでTweetテーブルと連携されました。
-7.  RepeatingGroupの一番上にGroupをドラッグ&ドロップして名前をGroupTweetに。LayoutタブのContainer LayoutをColumn, Make this element fixed-width のチェックを外す。StyleをRemoveStyleしてからBackgroundをFlatColor,FFFFFFに。Min-heightを100pxに。LayoutタブでMarginを全て10に
-8.  GroupTweetのAppearanceタブで、Type of contentをTweetに。
-9.  Data source は「CurrentCell's Tweet」
-10. GroupTweetにTextをドラッグ&ドロップ
-11. Appearanceタブの...edit...meをクリックしてInsert Dynamic Data, parent group's Tweet, 's Messageと順にクリックしましょう。
-12. Previewを見ると、これでデータが反映されたことがわかります。
-13. LayoutタブでMake this element fixed-width のチェックを外す。Min Heightを0にしましょう。RepeatingGroup TweetもMin Heightを0にしておきましょう。
+### Gemini 3
+マルチモーダルと推論で世界最強。あらゆるアイディアを実現する最高峰のモデル
+Claude Sonnet4.5, GPT-5.1と比較しても圧倒的
 
-### Tweetする画面を作ろう
-[![](https://img.youtube.com/vi/M6Rje__d830/0.jpg)](https://www.youtube.com/watch?v=M6Rje__d830)
+## Gemini 3.0の特徴
+- なんでも取り込めるマルチモーダル
+  - 長尺YouTubeの分析
+  - リアル撮影動画の分析
+- 誰でも操れる高性能のバイブコーディング(AIと人間が「雰囲気」や「ノリ」で対話しながら、自然言語の指示だけでソフトウェアを開発する手法)
+  - スライド資料(Google Slideにエクスポートで編集可能に)
+  - アプリ開発
+- 世界最高水準の推論・思考能力
+  - 複雑な情報の分析
+  - 最強モードDeep Think
 
-1. Loginの左にButtonを追加。...edit me...「+」にして、widthを60にしておこう
-2. Popupをドラッグ&ドロップ
-3. Popupの中にMulti Input, Buttonをドラッグし、適当に配置して、Buttonの名前をTweetにしておきましょう。
-4. Popupは、範囲外をクリックすると消えてしまいます。その時は、Page：indexの右のindex(ここ、Element Treeと言います)の三角からPopupAを選択しましょう。
-5. ＋ボタンをクリック。Start/Edit Workflowをクリック。
-6. Click here to add actionでElement Action, Show, Element:PopupA
-7. Previewで確認してみましょう。+で表示であればOK
-8. Element TreeからPopupAを選択。TweetボタンをクリックしてStart/Edit Workflowをクリック。
-9. Click here to add actionでData(Things), Create New Thing...
-10. Type: Tweet, Set Another Field, Message =MultiInput A's value
-11. クリアするために次のClick here to add actionでSearchからreset relevant inputs
-12. Popupを閉じるために次のClick here to add actionでElement Action, Hide Element: PopupA
-13. Tweetが現在4つまでしか表示されないので、Repeating Group TweetのSet fixed number of rowsを10くらいにしておきましょう。(チェック外してもいいですけど)
 
-## 今日のまとめ
-やばくないっすか？
-コード一行も書いてません。
+## 基本を抑えよう：モード
+[Gemini](https://gemini.google.com/app)にアクセスしましょう。
 
-もちろん、margin, padding等基礎は知っておいた方が良いし、デザインのところ少し頭使うかもしれません(今日はそんなにデザインしてない...)
+- 高速モード
+- 思考モード(3 Pro)
 
-でも、処理のところはボタン配置して、クリックしてるだけです。
+の二つのモードがあります。無料枠では思考モードは1日5回までとなっています。使い切るとGemini 2.5 Flashに自動で切り替わります。
 
-来週引き続き、機能していないLogin, SignUp(ユーザ管理)あたりからやっていこうと思います。
+なお、以前は学生向けに1年間無料がありましたが、[Google Gemini:学生限定の無料特典を確認](https://gemini.google/jp/students/?hl=ja)1ヶ月トライアルに変更されています。
 
+なお、開発者向けのプラットフォーム([Google AI Studio](https://aistudio.google.com/))を利用することで、100万トークン分（日本語で160〜170万文字）の利用まで無料で利用できます。
+
+(無料枠に関しては、どんどん変わっていくと思うので注意しましょう。)
+
+## 基本を抑えよう：+(ファイルを追加), マイクアイコン
+### ファイルを追加
+画像や動画を読み込ませることができます。
+PDF,txt,CSVファイルなどの多様な形式のファイルにも対応しています。
+
+### マイクアイコン
+音声による入力にも対応しています。
+
+## 基本を抑えよう：ツール
+### Deep Research
+Deep Research とは、複雑なトピックについて、AIが自律的にインターネット上の情報を詳細に調査・分析し、包括的なレポートにまとめてくれる機能です。
+
+### 画像を生成
+プロンプトから画像を出力することもできます。Nano Bananaが利用されます。
+
+Nano Banana(ナノバナナ)は、Googleが2025年8月に発表した画像生成・編集モデル「Gemini 2.5 Flash Image」のコードネームです。複数の画像を一枚に融合する機能や、キャラクターの一貫性を保った編集、自然言語による精密な加工、さらにGeminiの世界知識を活かした画像生成など、多彩な機能を備えています。
+
+Nano Banana Proを使用するには思考モードを選択します。
+
+### Canvas
+Gemini Canvas は、 Gemini に搭載されたインタラクティブな作業スペースです。
+文書作成、アプリ作成、ミニゲーム作成などに利用できます。
+
+### ガイド付き学習
+ユーザーが特定の目標や課題の学習をする際に、 Gemini がその達成をサポートするために段階的な指示やヒントを提供してくれる機能です。学習対象に関するクイズ・フラッシュカード・学習ガイドを作成することも可能です。
+
+## やってみよう1
+Deep Researchツールを用いて、
+「クリエイティブ系高等教育の少子化をめぐる問題」についてレポートを作成してください。
+
+高速モードで(思考モードは2で使いたい)、
+「インフォグラフィックス」を指定しましょう。
+
+共有のリンクを提出となります。
+
+## やってみよう2
+https://www.thu.ac.jp/exam/guidelines
+にある「2026年度入学者選抜要項」のPDFのURLをGeminiに渡して、スライドを作成してもらいましょう。
+
+1) 全体をスライドにまとめてもらう
+2) メディア文化コースについてスライドにまとめてもらう
+
+ツールでCanvasを選びましょう。
+多分、高速モードでは情報量が多くて、対応できません。(多分、「PDFからのスライド作成不可」となります。)
+思考モードで試してみましょう。(1日5回までに注意！)
+
+作成できたら、「スライドエクスポート」して、GoogleSlideで編集できることを確認しましょう。
+
+GoogleSlideで共有したリンクを提出となります。
+
+## 提出
+manabaに共有したURL
+1) Deep Research結果
+2) スライド(大学全体)
+3) スライド(メディア文化コース)
+
+の3つをコピぺした後、進化したAI時代に、人に何が求められているか、について簡単に200字以上で提出してください。
+
+<!--
+次回はNotebookLMをやりたいな...たくさん情報食わせて
+-->
+
+
+<!-- 2024の内容は、archive参照のこと-->
