--- a/2025/MediaRepresentationVI/mr6_11.md
+++ b/2025/MediaRepresentationVI/mr6_11.md
@@ -36,6 +36,7 @@ AIをベースに4回頑張る。
   - [やってみよう1](#やってみよう1)
   - [やってみよう2](#やってみよう2)
   - [提出](#提出)
+  - [提出されたものを見てみましょう。](#提出されたものを見てみましょう)
 
 ---
 ---
@@ -125,6 +126,9 @@ PDF,txt,CSVファイルなどの多様な形式のファイルにも対応して
 ## 基本を抑えよう：ツール
 ### Deep Research
 Deep Research とは、複雑なトピックについて、AIが自律的にインターネット上の情報を詳細に調査・分析し、包括的なレポートにまとめてくれる機能です。
+- [GeminiのDeep Researchが世界を変える。超優秀なAI人材があなたの代わりに働きます。【2025年版　Google Workspace Gemini特集】](https://www.youtube.com/watch?v=mkENQwVRcL4)
+
+geminiからだと、ちょっと違うみたいだけど...
 
 ### 画像を生成
 プロンプトから画像を出力することもできます。Nano Bananaが利用されます。
@@ -171,6 +175,8 @@ manabaに共有したURL
 3) スライド(メディア文化コース)
 
 の3つをコピぺした後、進化したAI時代に、人に何が求められているか、について簡単に200字以上で提出してください。
+
+## 提出されたものを見てみましょう。
 
 <!--
 次回はNotebookLMをやりたいな...たくさん情報食わせて
