--- a/2025/MediaRepresentationVI/mr6_11.md
+++ b/2025/MediaRepresentationVI/mr6_11.md
@@ -136,7 +136,9 @@ PDF,txt,CSVファイルなどの多様な形式のファイルにも対応して
 Deep Research とは、複雑なトピックについて、AIが自律的にインターネット上の情報を詳細に調査・分析し、包括的なレポートにまとめてくれる機能です。
 - [GeminiのDeep Researchが世界を変える。超優秀なAI人材があなたの代わりに働きます。【2025年版　Google Workspace Gemini特集】](https://www.youtube.com/watch?v=mkENQwVRcL4)
 
-geminiからだと、ちょっと違うみたいだけど...
+ちなみにMECE...1年で教えた気がする...
+- [MECEとは？フレームワークやわかりやすい例もまとめて紹介](https://bow-now.jp/media/column/mece/)
+
 
 ### 画像を生成
 プロンプトから画像を出力することもできます。Nano Bananaが利用されます。
