--- a/2025/MediaRepresentationVI/mr6_13.md
+++ b/2025/MediaRepresentationVI/mr6_13.md
@@ -19,6 +19,7 @@
       - [（3）人間中心の批判的評価を担う](#3人間中心の批判的評価を担う)
     - [3. 特定の認知プロファイルを持つ人々への補償的利用](#3-特定の認知プロファイルを持つ人々への補償的利用)
     - [4. 心理的・社会的側面での適切な利用](#4-心理的社会的側面での適切な利用)
+  - [Googleの大学生向け活用アイディア集](#googleの大学生向け活用アイディア集)
 
 ---
 
@@ -102,6 +103,17 @@ AIは、すべての人にとって認知能力の退化リスクをもたらす
 ---
 AIを効果的に活用するためには、AIは人間の認知機能の**筋肉を鍛えるための負荷を肩代わりするサポーター**ではなく、あくまで**思考の幅を広げるための協力者**であり、**限られた認知資源を補うための外部リソース**であると捉えることが重要です。無批判な受け入れは認知的な「栄養失調」を招く可能性があるため、常に主体的な関与と批判的思考を維持するバランスが求められます。
 
+---
+## Googleの大学生向け活用アイディア集
+- [現役大学生と一緒に作った「大学生 Gemini 活用アイデア集」を公開します！](https://note.com/google_gemini/n/n6c39863ed911)
+
+が公開されました。
+
+- [大学生のためのAI活用アイデア集 PDF](https://services.google.com/fh/files/misc/geminiforstudents_handbook_2025nov.pdf)
+
+「講義・レポート」「サークル活動や日常」「留学やスキルアップ」「就職活動」などにおいてのヒントが記載されています。
+
+有効活用しましょう。
 
 ---
 ---
