--- a/2025/InformationDesignII/id_12.md
+++ b/2025/InformationDesignII/id_12.md
@@ -10,6 +10,7 @@
   - [目次](#目次)
   - [スライド](#スライド)
   - [スライド以外で伝えたこと](#スライド以外で伝えたこと)
+    - [Local by FlyWheel](#local-by-flywheel)
     - [テーマ](#テーマ)
       - [種類](#種類)
       - [選び方](#選び方)
@@ -25,7 +26,6 @@
 
 ## スライド以外で伝えたこと
 
-<!--
 ### Local by FlyWheel
 MAMPはWordpressの仕組みを伝えるために使ったので、実際の制作にはこちらを使いましょう。
 気軽にwordpressのサイトを自分のコンピュータ上に設置することができます。
@@ -36,7 +36,8 @@ MacにIntel, Apple Silicon版があることに注意！
 「このMacについて」、で、CPU・チップのところに「Intel」の記載がある人はintel, M1, M2, M3の人は「AppleSilicon」を選びましょう。
 
 - [参考：local by flywheelインストールと使い方・WordPress環境構築](https://webst8.com/blog/wordpress-local-by-flywheel/)
--->
+
+
 
 ### テーマ
 #### 種類
@@ -48,13 +49,13 @@ MacにIntel, Apple Silicon版があることに注意！
 FSE対応を使っても良いですが、ちょっとまだコントロールしづらい部分あるので、クラシックテーマをおすすめします。
 
 #### 選び方
-「wordpress テーマ 2024 無料」などと検索して探しましょう。
+「wordpress テーマ 2025 無料」などと検索して探しましょう。
 日本語の情報が多いものの方が、後々楽だと思います。
 テーマによって、できることがかなり変わるので、テーマ選びは非常に大事になります。
 
 #### プラグイン
 プラグインによっても機能が拡張されます。
-「wordpress プラグイン 2024」などと検索して、こんなことできるのか、というのを見ておくと良いと思います。
+「wordpress プラグイン 2025」などと検索して、こんなことできるのか、というのを見ておくと良いと思います。
 
 #### wordpress全然わからないという人へ
 スクリーンキャスト作成しました。17分弱である程度の機能を網羅してあります。
